--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     
     <footer class="footer">
         <p>&copy; 2025 | Mendoza Side Event</p>
-        <p>Un evento independiente creado por y para entusiastas de la comunidad Web3.</p>
+        <p>Un evento independiente creado por y para entusiastas de la comunidad.</p>
     </footer>
 
     <script>
