--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Side Event Devconnect en Mendoza</title>
     <meta name="description" content="Una experiencia única y misteriosa en Mendoza, exclusiva para los asistentes de Devconnect Argentina 2025. Reserva tu lugar antes que nadie.">
     <style>
-        /* --- Nueva Paleta de Colores --- */
         :root {
-            --dark-bg: #0d1117; /* Azul noche profundo, inspirado en GitHub/Vercel */
+            --dark-bg: #0d1117;
             --main-text: #e0e0e0;
             --highlight-text: #ffffff;
-            --primary-accent: #8a2be2; /* Violeta/Púrpura "Malbec" */
+            --primary-accent: #8a2be2;
             --primary-accent-hover: #7b25c9;
-            --secondary-accent: #00e5ff; /* Turquesa/Cian "Tech" */
+            --secondary-accent: #00e5ff;
         }
-
         body, html {
             margin: 0;
             padding: 0;
@@ -24,24 +22,18 @@
             color: var(--main-text);
             line-height: 1.6;
         }
-
-        /* --- Contenedor para el Fondo Animado --- */
         #tsparticles {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1; /* Lo ponemos detrás de todo el contenido */
+            z-index: 0;
         }
-
-        /* --- Contenido Principal (Aseguramos que esté por encima de la animación) --- */
         .content-wrapper {
             position: relative;
             z-index: 1;
         }
-
-        /* --- Banner de Urgencia (Sin cambios, ya encaja bien) --- */
         .urgency-banner {
             background-color: rgba(0, 0, 0, 0.5);
             backdrop-filter: blur(5px);
@@ -51,8 +43,6 @@
             font-size: 0.9rem;
             font-weight: 500;
         }
-
-        /* --- Hero Section --- */
         .hero {
             height: 100vh;
             display: flex;
@@ -62,19 +52,16 @@
             padding: 0 20px;
             box-sizing: border-box;
         }
-
         .hero .content {
             max-width: 650px;
             animation: fadeIn 2s ease-in-out;
         }
-
         .hero h1 {
             color: var(--highlight-text);
             font-size: 2.5rem;
             margin-bottom: 0.5rem;
             font-weight: 700;
         }
-
         .hero h1 span {
             display: block;
             font-size: 1.5rem;
@@ -82,7 +69,6 @@
             font-weight: 400;
             margin-top: 0.5rem;
         }
-
         .hero .subtitle {
             font-size: 1.1rem;
             margin-bottom: 2rem;
@@ -90,8 +76,6 @@
             margin-left: auto;
             margin-right: auto;
         }
-
-        /* --- Formulario de Captura (Estilo actualizado) --- */
         #email-input {
             width: 100%;
             max-width: 400px;
@@ -105,7 +89,6 @@
             backdrop-filter: blur(2px);
         }
         #email-input::placeholder { color: #aaa; }
-
         #submit-button {
             width: 100%;
             max-width: 418px;
@@ -114,7 +97,7 @@
             font-weight: bold;
             border: none;
             border-radius: 5px;
-            background-color: var(--primary-accent); /* Color Malbec! */
+            background-color: var(--primary-accent);
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
@@ -122,7 +105,6 @@
         #submit-button:hover {
             background-color: var(--primary-accent-hover);
         }
-
         #confirmation-message {
             display: none;
             color: var(--highlight-text);
@@ -133,38 +115,31 @@
             background-color: rgba(138, 43, 226, 0.1);
             backdrop-filter: blur(5px);
         }
-
-        /* --- Secciones y Footer --- */
         .section {
             padding: 4rem 2rem;
             text-align: center;
             max-width: 800px;
             margin: 0 auto;
-            background-color: rgba(13, 17, 23, 0.7); /* Fondo semi-transparente para legibilidad */
+            background-color: rgba(13, 17, 23, 0.7);
             backdrop-filter: blur(10px);
             border-radius: 10px;
             margin-bottom: 2rem;
         }
-
         .section h2 {
             font-size: 2rem;
             color: var(--highlight-text);
             margin-bottom: 1rem;
         }
-
         .footer {
             text-align: center;
             padding: 2rem;
             font-size: 0.9rem;
             color: #888;
         }
-
-        /* --- Animaciones y Media Queries --- */
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
         }
-
         @media (min-width: 768px) {
             .hero h1 { font-size: 3.5rem; }
             .hero h1 span { font-size: 1.75rem; }
@@ -194,7 +169,7 @@
                 </p>
                 
                 <div id="form-container">
-                    <form id="email-form" onsubmit="handleFormSubmit(event)">
+                    <form id="email-form">
                         <input type="email" id="email-input" placeholder="Tu correo para asegurar tu acceso" required>
                         <button type="submit" id="submit-button">QUIERO MI LUGAR</button>
                     </form>
@@ -221,88 +196,86 @@
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.4.0/tsparticles.bundle.min.js"></script>
     
     <script>
-        // Función para manejar el envío del formulario
-        function handleFormSubmit(event) {
-            event.preventDefault(); // Evita que la página se recargue
-            const form = document.getElementById('email-form');
-            const confirmationMessage = document.getElementById('confirmation-message');
+        // Formulario
+        const form = document.getElementById('email-form');
+        const confirmationMessage = document.getElementById('confirmation-message');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
             const email = document.getElementById('email-input').value;
             console.log(`Email capturado: ${email}`);
             form.style.display = 'none';
             confirmationMessage.style.display = 'block';
-        }
+        });
 
-        // Configuración de tsParticles
-        window.addEventListener('load', () => {
-            tsParticles.load({
-                id: "tsparticles",
-                options: {
-                    background: {
-                        color: {
-                            value: "#0d1117" // Mismo azul noche del body
+        // Animación de partículas - CÓDIGO CORREGIDO
+        window.addEventListener('load', async () => {
+            await tsParticles.load("tsparticles", {
+                background: {
+                    color: {
+                        value: "#0d1117"
+                    }
+                },
+                fpsLimit: 60,
+                interactivity: {
+                    events: {
+                        onHover: {
+                            enable: true,
+                            mode: "grab"
+                        },
+                        onClick: {
+                            enable: true,
+                            mode: "push"
                         }
                     },
-                    fpsLimit: 60,
-                    interactivity: {
-                        events: {
-                            onHover: {
-                                enable: true,
-                                mode: "grab"
-                            },
-                            onClick: {
-                                enable: true,
-                                mode: "push"
+                    modes: {
+                        grab: {
+                            distance: 140,
+                            links: {
+                                opacity: 0.5
                             }
                         },
-                        modes: {
-                            grab: {
-                                distance: 140,
-                                links: {
-                                    opacity: 1
-                                }
-                            },
-                            push: {
-                                quantity: 4
-                            }
+                        push: {
+                            quantity: 4
                         }
+                    }
+                },
+                particles: {
+                    color: {
+                        value: ["#8a2be2", "#00e5ff"]
                     },
-                    particles: {
-                        color: {
-                            value: ["#8a2be2", "#00e5ff"] // ¡Nuestros colores! Malbec y Turquesa
-                        },
-                        links: {
-                            color: "#ffffff", // Conexiones en blanco sutil
-                            distance: 150,
-                            enable: true,
-                            opacity: 0.1,
-                            width: 1
-                        },
-                        move: {
-                            direction: "none",
-                            enable: true,
-                            outModes: "out",
-                            random: false,
-                            speed: 1,
-                            straight: false
-                        },
-                        number: {
-                            density: {
-                                enable: true,
-                            },
-                            value: 80 // Número de partículas
-                        },
-                        opacity: {
-                            value: 0.5
-                        },
-                        shape: {
-                            type: "circle"
-                        },
-                        size: {
-                            value: { min: 1, max: 3 }
-                        }
+                    links: {
+                        color: "#ffffff",
+                        distance: 150,
+                        enable: true,
+                        opacity: 0.1,
+                        width: 1
                     },
-                    detectRetina: true
-                }
+                    move: {
+                        direction: "none",
+                        enable: true,
+                        outModes: "out",
+                        random: true,
+                        speed: 1,
+                        straight: false
+                    },
+                    number: {
+                        density: {
+                            enable: true,
+                        },
+                        value: 80
+                    },
+                    opacity: {
+                        value: 0.5
+                    },
+                    shape: {
+                        type: "circle"
+                    },
+                    size: {
+                        value: { min: 1, max: 3 }
+                    }
+                },
+                detectRetina: true
             });
         });
     </script>
